src/tests/Loader/classloader/generics/Instantiation/Negative/param05.ilproj
<Project Sdk="Microsoft.NET.Sdk.IL">
  <PropertyGroup>
    <OutputType>Exe</OutputType>
    <CLRTestPriority>1</CLRTestPriority>
  </PropertyGroup>
  <ItemGroup>
    <Compile Include="param05.il" />
  </ItemGroup>
</Project>
